# MudClient

./: .bazelignore  .bazelrc  .gitignore  .mcp.json  BUILD.bazel  CLAUDE.md  MODULE.bazel  Package.resolved  Package.swift  decisions.md  human-driving.txt  justfile  test.script  tlconfig.lua
.swiftpm/configuration/: Package.resolved
MudClient.xcodeproj/: project.pbxproj
MudClient.xcodeproj/rules_xcodeproj/: generated.xcfilelist
MudClient.xcodeproj/rules_xcodeproj/bazel/: Debug-swift_debug_settings.py  bazel_build.sh  generate_bazel_dependencies.sh  import_indexstores  swiftc  xcodeproj.bazelrc
MudClient.xcodeproj/xcshareddata/xcschemes/: Afluent.xcscheme  ArgumentParser.xcscheme  ArgumentParserToolInfo.xcscheme  Atomics.xcscheme  CNIOAtomics.rspm_c.xcscheme  CNIODarwin.rspm_c.xcscheme  CNIOFreeBSD.rspm_c.xcscheme  CNIOLinux.rspm_c.xcscheme  CNIOOpenBSD.rspm_c.xcscheme  CNIOPosix.rspm_c.xcscheme  CNIOWASI.rspm_c.xcscheme  CNIOWindows.rspm_c.xcscheme  ContainersPreview.xcscheme  DependencyInjection.xcscheme  DequeModule.xcscheme  InternalCollectionsUtilities.xcscheme  MudClient.xcscheme  MudClientMain.xcscheme  MudClientTests.xcscheme  NIO.xcscheme  NIOConcurrencyHelpers.xcscheme  NIOCore.xcscheme  NIOEmbedded.xcscheme  NIOPosix.xcscheme  (+7 more)
Scripts/: AIPilot.lua  AIPilot.tl  AlterAeon.lua  AlterAeon.tl  Audio.lua  Audio.tl  AutoFight.lua  AutoFight.tl  BUILD.bazel  BookDump.lua  BookDump.tl  CLAUDE.md  ChatDecode.lua  ChatDecode.tl  Combat.lua  Combat.tl  Corpse.lua  Corpse.tl  DCast.lua  DCast.tl  DClientProbe.lua  DClientProbe.tl  Equipment.lua  Equipment.tl  HUD.lua  HUD.tl  Promise.lua  Prompt.lua  Prompt.tl  RPC.lua  RPC.tl  Recovery.lua  Recovery.tl  Sequence.lua  Soulforge.lua  Soulforge.tl  Speech.lua  Speech.tl  Trivia.lua  Trivia.tl  (+10 more)
Scripts/AlterAeon/: AIPilot.lua  AIPilot.tl  AlterAeon.lua  AlterAeon.tl  Audio.lua  Audio.tl  AutoFight.lua  AutoFight.tl  BookDump.lua  BookDump.tl  ChatDecode.lua  ChatDecode.tl  Combat.lua  Combat.tl  Corpse.lua  Corpse.tl  DCast.lua  DCast.tl  DClientProbe.lua  DClientProbe.tl  Equipment.lua  Equipment.tl  Events.lua  Events.tl  HUD.lua  HUD.tl  Package.swift  Prompt.lua  Prompt.tl  RPC.lua  RPC.tl  Recovery.lua  Recovery.tl  Soulforge.lua  Soulforge.tl  Speech.lua  Speech.tl  Trivia.lua  Trivia.tl  alteraeon.d.tl
Scripts/AlterAeon/.swiftpm/configuration/: Package.resolved
Scripts/AlterAeon/Sources/AlterAeon/: AlterAeon.swift
Scripts/AlterAeon/Tests/AlterAeonTests/: AlterAeonTests.swift
Scripts/Foundation/: Container.lua  Container.tl  Machine.lua  Machine.tl  Parse.lua  Parse.tl  Promise.lua  Promise.tl  Route.lua  Route.tl  _dsl.lua  _dsl.tl  _persist.lua  _persist.tl  _rx.lua  _rx.tl  env.d.tl  foundation.d.tl
Scripts/tests/: affects_spec.lua  aipilot_spec.lua  assist_spec.lua  autofight_spec.lua  bootstrap_spec.lua  chatdecode_spec.lua  combat_only_spec.lua  combat_speed_spec.lua  corpse_spec.lua  dcast_spec.lua  dclient_group_spec.lua  doc_coverage_spec.lua  equipment_spec.lua  events_spec.lua  frame_filter_spec.lua  goto_route_spec.lua  hud_layout_spec.lua  hud_spec.lua  kxwt_prompt_blank_spec.lua  lifetap_spec.lua  load_spec.lua  maintain_spec.lua  migration_spec.lua  minion_heal_spec.lua  music_spec.lua  nav_explore_spec.lua  opponents_spec.lua  parse_spec.lua  pb_spec.lua  persist_spec.lua  pilot_timer_spec.lua  pipe_spec.lua  promise_spec.lua  prompt_recover_spec.lua  prompt_spec.lua  recover_spec.lua  rpc_spec.lua  rx_spec.lua  sequence_spec.lua  smap_bridge_spec.lua  (+8 more)
Sources/CLua/: BUILD.bazel
Sources/CLua/include/: clua.h  clua_shim.h  module.modulemap
Sources/MudClient/: AIPilotService.swift  BUILD.bazel  ClaudeInboxWatcher.swift  Connection.swift  ConnectionManager.swift  ConnectionRepository.swift  Cursor.swift  DispatchBundle.swift  IAC.swift  InputService.swift  KXWTHost.swift  Keychain.swift  LLMClient.swift  LagMonitor.swift  LineAssembler.swift  LineFramer.swift  LiveMidiService.swift  Lua.swift  LuaScriptEngine.swift  MSP.swift  MSPService.swift  MudClient.swift  MusicService.swift  NetConnection.swift  PanelHost.swift  RAGRetriever.swift  RPCConnection.swift  RPCFramer.swift  RawCapture.swift  ScriptInterpreter.swift  ServerTextFeed.swift  SessionLog.swift  SoundService.swift  SpeechBuiltins.swift  SpeechService.swift  TerminalService.swift  TranscriptStore.swift  dclient_rpc.pb.swift  xirr_client_rpc.pb.swift  xirr_rpc.pb.swift  (+2 more)
Sources/MudClient/RPC/proto/: dclient_rpc.proto  xirr_client_rpc.proto  xirr_rpc.proto  xirr_server_rpc.proto  xirr_soundpack_rpc.proto
Sources/ScriptDescription/: Alias.swift  BUILD.bazel  Gag.swift  NoopScript.swift  Script.swift  ScriptBuilder.swift  ScriptContext.swift  ScriptDescription.swift  ScriptFactory.swift  Trigger.swift
Tests/MidiAudition/: BUILD.bazel  MidiAuditionTests.swift
Tests/MudClientTests/: AudioTestSupport.swift  BUILD.bazel  ClaudeInboxWatcherTests.swift  DispatchBundleTests.swift  DocCoverageTests.swift  InputServiceTests.swift  LineFramerTests.swift  LuaScriptEngineTests.swift  MSPServiceTests.swift  MudClientTests.swift  README.md  RPCAuthTests.swift  RPCFramerTests.swift  SpeechServiceTests.swift  TerminalServiceTests.swift  TranscriptStoreTests.swift
docs/protocol/: kxwt-midi.md
swift/: Package.resolved  Package.swift
tools/: ai-script-agent.sh
tools/dispatch/: README.md  mud-channel.mjs  package-lock.json  package.json  report-to-game.test.mjs  stop-ping.py
tools/finetune/: .gitignore  README.md  bench4.out  build_combined.py  build_dataset.py  build_rag_index.py  ctxbench.out  game_help.sh  loaded-before-train.bak.json  loaded-before-train.json  lora_moe.yaml  moe_load.err  parse_capture.py  prep_combat.py  probe.out  run_train_35b.sh  run_train_dense.sh  run_train_moe_attn.sh  run_training.sh  scrape_help.py  scrape_help_topics.py  serve.sh  watch_demos.py
tools/luatest/: BUILD.bazel  driver.lua  main.c  run.sh
tools/teal/: build.sh  tl
tools/trace-art/: README.md  com.mudclient.trace-art.plist  generate.py  install.sh  prep-bg.swift  run.sh
tools/tts/: .gitignore  README.md  serve.py  serve.sh  setup.sh
(+5 files in other folders)
