# Exposes the ported Lua scripts as build inputs (e.g. test `data`).
exports_files(["AlterAeon.lua", "AIPilot.lua", "AutoFight.lua", "HUD.lua", "Trivia.lua", "Equipment.lua", "bootstrap.lua"])

# Every runtime script plus the test harness + specs, consumed as `data` by the Lua script test
# (//tools/luatest:lua_scripts_test) so it loads exactly what the app loads.
filegroup(
    name = "lua_srcs",
    srcs = [
        "bootstrap.lua",
        "AlterAeon.lua",
        "AIPilot.lua",
        "AutoFight.lua",
        "HUD.lua",
        "Trivia.lua",
        "Equipment.lua",
        "Speech.lua",
        "ChatDecode.lua",
        "Promise.lua",
        "testing.lua",
    ] + glob(["tests/*.lua"]),
    visibility = ["//visibility:public"],
)
