# Exposes the ported Lua scripts as build inputs (e.g. test `data`).
exports_files(["AlterAeon.lua", "AIPilot.lua", "AutoFight.lua", "HUD.lua", "Trivia.lua", "Equipment.lua", "bootstrap.lua",
               "Audio.lua", "Combat.lua", "Corpse.lua", "Recovery.lua", "_dsl.lua", "_rx.lua"])

# Every runtime script plus the test harness + specs, consumed as `data` by the Lua script test
# (//tools/luatest:lua_scripts_test) so it loads exactly what the app loads.
filegroup(
    name = "lua_srcs",
    srcs = [
        "bootstrap.lua",
        "_dsl.lua",
        "_rx.lua",
        "AlterAeon.lua",
        "Audio.lua",
        "AIPilot.lua",
        "AutoFight.lua",
        "Combat.lua",
        "Corpse.lua",
        "HUD.lua",
        "Recovery.lua",
        "Trivia.lua",
        "Equipment.lua",
        "Speech.lua",
        "ChatDecode.lua",
        "Promise.lua",
        "testing.lua",
    ] + glob(["tests/*.lua"]),
    visibility = ["//visibility:public"],
)
