# Exposes the ported Lua scripts as build inputs (e.g. test `data`). Foundation/ and AlterAeon/ have no
# BUILD.bazel of their own, so they're still part of THIS package (Scripts) — labels are just
# Scripts-relative subdirectory paths, e.g. //Scripts:AlterAeon/AlterAeon.lua.
#
# GLOBBED, not hand-listed, so adding/moving a script never silently drops it from the build/test set
# (a hand-list dropped BookDump.lua/DCast.lua during the Foundation/AlterAeon reorg).
exports_files(glob(["*.lua", "Foundation/*.lua", "AlterAeon/*.lua"]))

# Every runtime script (top-level bootstrap + Foundation/ + AlterAeon/) plus the test harness + specs,
# consumed as `data` by the Lua script test (//tools/luatest:lua_scripts_test) so it loads exactly what
# the app loads. `*.lua` at top level is just bootstrap.lua; tests/ carries testing.lua's specs.
filegroup(
    name = "lua_srcs",
    srcs = glob([
        "*.lua",              # bootstrap.lua
        "Foundation/*.lua",   # _dsl/_rx/_persist/Promise/testing
        "AlterAeon/*.lua",    # the 18 game scripts
        "tests/*.lua",        # the spec suite
    ]) + ["rpc_descriptor.pb"],
    visibility = ["//visibility:public"],
)
