load("@rules_swift//swift:swift.bzl", "swift_binary", "swift_library")

# The raw source files, as data for the doc-coverage test: it scans these for lua.register("…") and
# callGlobal("on_…") call sites and asserts each has a doc() entry in Scripts/bootstrap.lua.
filegroup(
    name = "swift_srcs",
    srcs = glob(["*.swift"]),
    visibility = ["//visibility:public"],
)

_DEPS = [
    "//Sources/CLua",
    "//Sources/ScriptDescription",
    "@swift_parsing//:Parsing",
    "@swiftpkg_afluent//:Afluent",
    "@swiftpkg_dependencyinjection//:DependencyInjection",
    "@swiftpkg_mockable//:Mockable",
    "@swiftpkg_shellout//:ShellOut",
    "@swiftpkg_swift_argument_parser//:ArgumentParser",
    "@swiftpkg_swift_nio//:NIO",
]

# The full module, including the `@main` entry point (MudClient.swift), compiled
# straight into the executable.
swift_binary(
    name = "MudClient",
    srcs = glob(["*.swift"]),
    module_name = "MudClientMain",
    visibility = ["//visibility:public"],
    deps = _DEPS,
)

# The same module MINUS the `@main` entry point, for tests to `@testable import
# MudClient`. Excluding MudClient.swift keeps the `_main` symbol out of the test
# bundle (it would collide with the generated test runner's `main`). The test
# only exercises IAC.swift, so the entry point isn't needed here.
swift_library(
    name = "MudClientLib",
    srcs = glob(
        ["*.swift"],
        exclude = ["MudClient.swift"],
    ),
    # MOCKING makes Mockable's @Mockable macro emit its generated Mock types (they're wrapped in
    # `#if MOCKING`). Defined here — the test-facing module — so mocks are available to the test
    # bundle that `@testable import MudClient`s them, while the production `swift_binary` above
    # compiles the same sources WITHOUT MOCKING, keeping mocks out of the shipped app.
    defines = ["MOCKING"],
    module_name = "MudClient",
    visibility = ["//visibility:public"],
    deps = _DEPS,
)
