load("@rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "MudClientTests",
    size = "small",
    srcs = glob(["*.swift"]),
    # The Lua-script load test and the raw-log repro read these from runfiles (resolved via #filePath).
    data = [
        "//Scripts:bootstrap.lua",
        "//Scripts:AlterAeon.lua",
        "//Scripts:AIPilot.lua",
        "//Sources/MudClient:swift_srcs",
        "fixtures/pellam_kxwt_capture.log",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/MudClient:MudClientLib",
        "@swift_parsing//:Parsing",
        "@swiftpkg_dependencyinjection//:DependencyInjection",
        "@swiftpkg_mockable//:Mockable",
    ],
)
